--- a/docker/toolchain/Dockerfile
+++ b/docker/toolchain/Dockerfile
@@ -1,18 +1,21 @@
 FROM ubuntu:18.04 AS prepare-ubuntu
 SHELL ["/bin/bash", "-c"]
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN rm /etc/apt/apt.conf.d/docker-clean && \
+  echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+RUN --mount=type=cache,dst=/var/cache/apt \
+  --mount=type=cache,dst=/var/lib/apt \
+  apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
-  curl && \
-  rm -rf /var/lib/apt/lists/*
-RUN apt-get update && apt-get install -y \
+  curl
+RUN --mount=type=cache,dst=/var/cache/apt \
+  --mount=type=cache,dst=/var/lib/apt \
+  apt-get update && apt-get install -y \
   build-essential \
-  git \
   musl-tools \
   pkg-config \
   vim \
-  zip && \
-  rm -rf /var/lib/apt/lists/*
+  zip
 ARG RUST_VERSION
 ENV CARGO_HOME=/opt/cargo
 ENV PATH=$CARGO_HOME/bin:$PATH
@@ -27,12 +30,13 @@ RUN cargo install exa
 
 FROM prepare-ubuntu AS sccache
 ARG DEBIAN_FRONTEND=noninteractive
-RUN cargo install --git https://github.com/mozilla/sccache.git --rev e6326bc --no-default-features sccache
+RUN cargo install --no-default-features sccache
 
 FROM prepare-ubuntu
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=JST-9
-RUN apt-get update && apt-get install tzdata && \
-  rm -rf /var/lib/apt/lists/*
+RUN --mount=type=cache,dst=/var/cache/apt \
+  --mount=type=cache,dst=/var/lib/apt \
+  apt-get update && apt-get install tzdata
 COPY --from=exa $CARGO_HOME/bin/exa $CARGO_HOME/bin/
 COPY --from=sccache $CARGO_HOME/bin/sccache $CARGO_HOME/bin/
